--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,7 +1,7 @@
 <h1>pages show</h1>
 	<li><%= @list.name%></li>
 
-	<p><strong>Reviews</strong></p>
+	<p><strong>Bookmark</strong></p>
 		<ul class="list-group">
 		  <% @list.bookmarks.each do |bookmark| %>
 		    <li class="list-group-item"><%= bookmark.comment %></li>
@@ -12,6 +12,6 @@
 		  <% end %>
 		</ul>
 
-<%= link_to 'new', new_list_bookmark_path(@list), class: "btn btn-warning mb-4" %> <br>
+<%= link_to 'new bookmark', new_list_bookmark_path(@list), class: "btn btn-warning mb-4" %> <br>
 
 <%= link_to 'back to the list all', lists_path, class: "btn btn-warning mb-4" %> <br>
