delete controller movie

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <a class="navbar-brand" href="Watch list">
+    <a class="navbar-brand" href="/new/list.html">
       <i class="fa-solid fa-clapperboard"></i>
       Cinéma Cinéma Tchi Tcha
 </a>
