--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -4,7 +4,8 @@
 	<p><strong>Bookmark</strong></p>
 		<ul class="list-group">
 		  <% @list.bookmarks.each do |bookmark| %>
-		  <%= image_tag bookmark.movie.poster_url, class:"poster-img" %>
+		  <%= image_tag("THE_IMAGE_ID_FROM_LIBRARY",
+      width: 400, height: 300, crop: :fill) bookmark.movie.poster_url, class:"poster-img" %>
 	      <%= bookmark.movie.title %>
 	      <%= bookmark.movie.overview %>
 	      <%= bookmark.movie.rating %>
