--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,10 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container-fluid p-0">
       <%= render 'layouts/navbar' %>
     <%= yield %>
+    
     </div>
   </body>
 </html>
