--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,5 @@
-<h1>pages show</h1>
+<div class="container">
+	
 	<li><%= @list.name%></li>
 
 	<p><strong>Bookmark</strong></p>
@@ -7,7 +8,7 @@
 		  <%= image_tag(bookmark.movie.poster_url,
 	      width: 400, height: 300, crop: :fill , 
 	      class:"poster-img" )%>
-	      <%= bookmark.movie.title %>
+	      <%= bookmark.movie.title %>	
 	      <%= bookmark.movie.overview %>
 	      <%= bookmark.movie.rating %>
 		   <li class="list-group-item"><%= bookmark.comment %></li>
@@ -20,3 +21,4 @@
 <%= link_to 'new bookmark', new_list_bookmark_path(@list), class: "btn btn-warning mb-4" %> <br>
 
 <%= link_to 'back to the list all', lists_path, class: "btn btn-warning mb-4" %> <br>
+</div>
